1 - {settings-main,user-invitation,user-list}: Fix modal display on mobile device

--- a/core/client/ui/user-invitation.scss
+++ b/core/client/ui/user-invitation.scss
@@ -28,6 +28,14 @@
     width: 145px;
     margin-top: 5px;
 
+    @include media-max("phone-down") {
+      width: 45px;
+
+      .text {
+        display: none;
+      }
+    }
+
     svg {
       width: 18px;
       height: 18px;
