--- a/core/client/ui/user-list.scss
+++ b/core/client/ui/user-list.scss
@@ -69,51 +69,56 @@
     list-style-type: none;
     font-size: 0.9rem;
     overflow: auto;
+    display: grid;
 
     .user {
-      margin: 2px 10px;
-      padding: 0 5px;
+      margin: 0px 10px;
+      padding: 2px 5px;
       border-radius: 5px;
       line-height: 26px;
       display: grid;
-      grid-template-columns: 220px minmax(180px, auto) minmax(150px, auto) minmax(70px, auto) 30px;
+      grid-template-columns: 30px repeat(3, 1fr) 50px 30px;
       align-items: center;
+      grid-gap: 5px;
+
+      @include media-max("phone-down") {
+        border-radius: initial;
+
+        &:nth-child(even) {
+          background: rgba(255, 255, 255, .1);
+        }
+      }
 
       &:hover {
         background-color: darken($main-color, 5%);
       }
 
-      .main {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
+      .js-profile {
+        cursor: pointer;
+        white-space: nowrap;
+        overflow: hidden;
+        max-width: 215px;
+        text-overflow: ellipsis;
 
-        .js-profile {
-          cursor: pointer;
-          white-space: nowrap;
-          overflow: hidden;
-          max-width: 215px;
+        &:hover {
+          color: $light-blue;
+        }
+      }
 
-          &:hover {
-            color: $light-blue;
-          }
+      .avatar-viewer {
+        width: 30px;
+        height: 35px;
+        margin-right: 5px;
+
+        .character-body-part-container {
+          transform: scale(0.4) translate(-24px, -70px);
         }
 
-        .avatar-viewer {
-          width: 30px;
-          height: 35px;
-          margin-right: 5px;
-
-          .character-body-part-container {
-            transform: scale(0.4) translate(-24px, -70px);
-          }
-
-          .avatar::before {
-            bottom: 4px;
-            right: 4px;
-            width: 6px;
-            height: 6px;
-          }
+        .avatar::before {
+          bottom: 4px;
+          right: 4px;
+          width: 6px;
+          height: 6px;
         }
       }
 
@@ -131,6 +136,7 @@
         text-align: center;
         white-space: nowrap;
         overflow: hidden;
+        text-overflow: ellipsis;
       }
 
       .guild {
@@ -150,6 +156,7 @@
         display: flex;
         flex-direction: row;
         gap: 8px;
+        flex-wrap: wrap;
 
         button {
           cursor: pointer;
